<resources>
    <string name="app_name">XiaoYou</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="completing_login">completing login …</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="remerber_password">remember PWD</string>
    <string name="auto_login">auto login</string>
    <string name="cancel">Cancel</string>
    <string name="submit">submit</string>
    <string name="back">back</string>
    <string name="showpassword">showpassword</string>
    <string name="error">Error</string>
    <string name="server_ok">Server Success</string>
    <string name="server_failed">Server Error</string>
    <string name="json_error">unable to get info,please try again</string>
    <string name="input_username">please input username</string>
    <string name="input_password">please input password</string>
    <string name="confirm_password">please confirm password</string>
    <string name="input_router_id">please input Router ID</string>
    <string name="input_identifying_code">please input identifying code</string>
    <string name="completing_register">completing register …</string>
    <string name="password_length_warning">password must be 6–32 characters long</string>
    <string name="confirm_password_not_match_warning">The passwords you entered do not match. Enter the same password in both boxes</string>
    <string name="username_length_warning">username must be 6–32 characters long</string>
    <string name="soft_update_no">The update is not found, your software is up to date</string>
    <string name="soft_update_title">update</string>
    <string name="soft_update_info">software is updating</string>
    <string name="soft_update_updatebtn">update now</string>
    <string name="soft_update_later">update later</string>
    <string name="soft_updating">updating</string>
    <string name="function_election">Function Selection</string>
    <string name="wireless_stroage">Wireless Storage</string>
    <string name="baiduyunpan">BaiDuYun Settings</string>
    <string name="route_manager">Route Manager</string>
    <string name="network_info">Network Info</string>
    <string name="through_wall_settings">Through wall settings</string>
    <string name="network_connecitity_state">Network Connecitity State</string>
    <string name="connected_user_number">Connected User Number</string>
    <string name="switch_work_mode">Switch WPS Work Mode</string>
    <string name="ap">AP</string>
    <string name="ap_sta">AP+STA</string>
    <string name="ssid">SSID</string>
    <string name="user_management">User management</string>
    <string name="soft_version">Software Version</string>
    <string name="version_num">Version: </string>
    <string name="product_info">Product Info</string>
    <string name="firmware_upgrade">Firmware Upgrade</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="upgrade">Upgrade</string>
    <string name="network_settings">Network settings</string>
    <string name="wireless_settings">Wireless settings</string>
    <string name="update_password">update password</string>
    <string name="upgrade_ota">system firmware upgrade OTA</string>
    <string name="pppoe">PPPOE settings</string>
    <string name="ap_client">AP client</string>
    <string name="dhcp">DHCP settings</string>
    <string name="account">Account</string>
    <string name="ok">OK</string>
    <string name="scan">Scan</string>
    <string name="security">Security</string>
    <string name="no_pwd">No encryption</string>
    <string name="strong_pwd">Strong encryption</string>
    <string name="save">Save</string>
    <string name="loading">Loading …</string>
    <string name="usb_mode">USB mode</string>
    <string name="charging">charging</string>
    <string name="udisk">udisk</string>
    <string name="connect_error">connect error, cannot connect with route.</string>
    <string name="op_success">Operate Success.</string>
    <string name="op_failed">Operate Failed.</string>
    <string name="passwd_len_error">The password is too short.</string>
    <string name="ssid_error">Ssid Error.</string>
    <string name="wirelessstore">wirelessstore</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_wireless_setting">WirelessSettingActivity</string>
    <string name="copied_file_name">Copy %s</string>
    <string name="copied_file_name_2">Copy%1$d %2$s</string>
    <string name="loging">Login...</string>
    <string name="choice_bak_dir">Choose  Backup Directory</string>
    <string name="mkdir_success">Create Folder %s Success!</string>
    <string name="dir_exist">Folder %s Exist!</string>
    <string name="mkdir_failed">Create Folder %s Failed!</string>
    <string name="del_success">Delete %s Success!</string>
    <string name="del_failed">Delete %s Failed!</string>
    <string name="rename_success">Rename %1$s to %2$s Success!</string>
    <string name="rename_failed">Rename %1$s to %2$s Failed!</string>
    <string name="move_success">Move %s Success!</string>
    <string name="move_failed">Move %s Failed!</string>
    <string name="paste_success">Paste %s Success!</string>
    <string name="paste_failed">Paste %s Failed!</string>
    <string name="copied_file_success">Copy %s Success!</string>
    <string name="cuted_file_success">Cut %s Success!</string>
    <string name="download_file_success">Download %s Success!</string>
    <string name="download_file_cancel">Download %s Cancel!</string>
    <string name="upload_file_success">Upload %s Success!</string>
    <string name="upload_file_cancel">Upload %s Cancel!</string>
    <string name="no_access">No Permission !</string>
    <string name="remainder">Remainder:</string>
    <string name="reame">Rename</string>
    <string name="delete">Delete</string>
     <string name="copy">Copy</string>
     <string name="cut">Cut</string>
      <string name="paste">Paste</string>
     <string name="download">Download</string>
     <string name="upload">Upload</string>
     <string name="mkdir">New Folder</string>
     <string name="del_msg">Sure delete %s ?</string>
     <string name="Illegal_operation">Illegal Operation.</string>
     <string name="copyorcut_first">Please copy or cut first.</string>
     <string name="choice_download_dir">Choice download Folder.</string>
     <string name="choice_upload_file">Choose  upload File.</string>
     <string name="retry">Retry</string>
     <string name="taskfailed">Task Failed</string>
     <string name="bakup_setup">Backup Directory Setup</string>
     <string name="start_backup">Start Backup</string>
     <string name="unsupport">Unsupport to Open.</string>
     <string name="disconnect">Samba Disconnect.</string>
     <string name="illegal_char">Exists Illegal Character</string>
     <string name="dir_not_create">Folder Not Created.</string>
     <string name="pastting">Pastting...</string>
     <string name="downloading">Downloading %s :</string>
     <string name="uploading">Uploading %s :</string>
     <string name="caching">Caching %s :</string>
     <string name="unknow_file">Unknow File.</string>
     <string name="reopt">Please Retry Operation</string>
     <string name="rename_illegal">Illegal rename.</string>
     <string name="input_max">Input is the longest</string>
     <string name="task_status">Task Status</string>
     <string name="setup_back">Please setup Backup-Folder First!</string>
     <string name="backuping">Backuping...</string>
     <string name="del_native">Backuped then delete source files.</string>
     <string name="calculating">calculating...</string>
     <string name="backup">Backup</string>
     <string name="newfolder">New Folder</string>
     <string name="show_showpath">Path: %s</string>
     <string name="illegal_paste">The same directory,Illegal operation.</string>
     <string name="max_path">The name is too long for this directory. </string>
	 <string name="backup_path">Backup Path.</string>
	  <string name="file_only">Upload File only.</string>
    <string name="remotecontrol">Remote Control</string>
    <string name="title_activity_main">Remote Control </string>
    <string name="device_name">CTRL</string>
    <string name="toast">TOAST</string>
    <string name="timeout">Timeout</string>
    <string name="title_studying"><![CDATA[Are learning...]]></string>
    <string name="title_studyed">Learning success</string>
    <string name="title_about">About</string>
    <string name="study_alert"><![CDATA[Please specify a button to learn"]]></string>
    <string name="study_info"><![CDATA[Please be learned remote control transmitter head close alignment receiver transmitter head, a distance of about 3CM, and long learning keys 1 to 2S]]></string>
    <string name="study_loading">study loading</string>
    <string name="study_timeout">Study data timeout quit</string>
    <string name="study_save">Save data</string>
    <string name="study_noprepared">Device is not prepared, please try it later</string>
    <string name="study_exit">Quit learning</string>
    <string name="about_ok">OK</string>
    <string name="device_type">Device Type:                     </string>
    <string name="name_text">Device Name</string>
    <string name="repeat_text">Repeat</string>
    <string name="cur_name">Current Device</string>
     <string name="index_name">Current Index</string>
    <string name="count_text"></string>
    <string name="auto_text">Auto</string>
    <string name="stop_text">Stop</string>
    <string name="up_text">Up</string>
    <string name="down_text">Down</string>
    <string name="manual_text">manually</string>
    <string name="save_text">Save</string>
    <string name="set_menu">SetUp</string>
    <string name="updata_end">Database updata finished</string>
    <string name="air_power_off">Mode:OFF</string>
    <string name="language">
        
	<![CDATA[
	Software installation:"*. Apk" files copied or downloaded to the phone memory card 
    through the "document management" or "File Manager" to find the file, 
    click on the relevant directory follow the prompts to install, 
    the system will generate: "mobile phone remote control icon;\n
	]]>		
    </string>
    <string name="about_info">
<![CDATA[\n
        							   ]]>
    </string>
    <string name="Long"><![CDATA[]]></string>
    <string name="str_about">
	<![CDATA[
	
	]]>
    </string>
    <string name="LongAbout">
<![CDATA[\n]]>
    </string>
    <string name="Clean"></string>
    <string name="fan_power">ON/OFF</string>
    <string name="fan_mode"> Mode</string>
    <string name="fan_anion">Anion</string>
    <string name="fan_volume">Air Volume</string>
    <string name="fan_speed">Speed</string>
    <string name="fan_speedlow">Low Speed</string>
    <string name="fan_speedmiddle">Medium Speed</string>
    <string name="fan_speedhigh">High Speed</string>
    <string name="fan_sleep">Sleep</string>
    <string name="fan_shake">Shake</string>
    <string name="fan_cool">Cold</string>
    <string name="fan_timer">Timing</string>
    <string name="fan_light">Light</string>
    <string name="fan_key1">1</string>
    <string name="fan_key2">2</string>
    <string name="fan_key3">3</string>
    <string name="fan_key4">4</string>
    <string name="fan_key5">5</string>
    <string name="fan_key6">6</string>
    <string name="fan_key7">7</string>
    <string name="fan_key8">8</string>
    <string name="fan_key9">9</string>
    <string name="air_power">ON/OF</string>
    <string name="air_tempadd">Up</string>
    <string name="air_tempsub">Down</string>
    <string name="air_mode">Mode</string>
    <string name="air_wind_count">Air volume</string>
    <string name="air_wind_dir">Manually Wind</string>
    <string name="air_wind_auto_dir">Auto Wind</string>
    <string name="quit">Exit</string>
</resources>