<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fan_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:textColor="@color/btntextcolor"
            android:text="@string/fan_power" />  
                        
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fan_key1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_key1" />

        <Button
            android:id="@+id/fan_key2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_key2" />

        <Button
            android:id="@+id/fan_key3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_key3" />

        <Button
            android:id="@+id/fan_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_light" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fan_key4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_key4" />

        <Button
            android:id="@+id/fan_key5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_key5" />

        <Button
            android:id="@+id/fan_key6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_key6" />

        <Button
            android:id="@+id/fan_sleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_sleep" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fan_key7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_key7" />

        <Button
            android:id="@+id/fan_key8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_key8" />

        <Button
            android:id="@+id/fan_key9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_key9" />

        <Button
            android:id="@+id/fan_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_mode" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fan_anion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_anion" />

        <Button
            android:id="@+id/fan_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_speed" />

        <Button
            android:id="@+id/fan_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_timer" />

        <Button
            android:id="@+id/fan_cool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_cool" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fan_speedmiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_speedmiddle" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fan_speedlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_speedlow" />

        <Button
            android:id="@+id/fan_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_volume" />

        <Button
            android:id="@+id/fan_speedhigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_speedhigh" />
    </LinearLayout>

    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fan_shake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:textColor="@color/btntextcolor"
            android:text="@string/fan_shake" />
    </LinearLayout>
<!-- 
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >
    
        <Spinner
            android:id="@+id/fan_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
     </LinearLayout> 
 -->
</LinearLayout>