<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
  
    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_text"
                android:textSize="20sp" />
           <TextView
                android:id="@+id/index_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/index_name"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/index_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_text"
                android:textSize="20sp" />
            
             
        </LinearLayout>
		
        <Spinner
            android:id="@+id/remote_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
          <TextView
                android:id="@+id/remote_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_text"
                android:textSize="60sp" />
    </LinearLayout>

   

    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/code_up"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="@string/up_text" />

        <Button
            android:id="@+id/code_quit"
            android:layout_width="200dp"
            android:layout_height="100dp"
         android:layout_marginTop="50dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="@string/quit" />

        <Button
            android:id="@+id/code_down"
            android:layout_width="200dp"
            android:layout_height="100dp"
         android:layout_marginTop="50dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="@string/down_text" />
        <Button
            android:id="@+id/code_repeat"
            android:layout_width="200dp"
            android:layout_height="100dp"
         android:layout_marginTop="50dp"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="@string/repeat_text" />
    </LinearLayout>

 

   

</LinearLayout>